Moved menu icon left to avoid clash with wagtail userbar on small screens

--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -97,6 +97,10 @@ h1 {
 				@extend left;
 			}
 		}
+
+		.toggle-topbar {
+			left: 0;
+		}
 	}
 
 	.top-bar.primary.expanded {
